packages/rspack/tests/configCases/errors/loader-syntax-error/my-loader.js
module.exports = function (context) {
  const error: string = "error"
};
